syntax = "proto3";
import "google/protobuf/empty.proto";

package proto;
option go_package = "github.com/xiexianbin/go-grpc-demo/proto";

message NumRequest {
    repeated int64 Nums = 1;
}

message NumResponse {
    int64 Result = 1;
}

message VersionResponse {
    string Version = 1;
}

message FilePath {
    string path = 1;
}

message FileResponse {
    bytes content = 1;
}

service DemoService {
    rpc Sum(NumRequest) returns (NumResponse) {}
    rpc Diff(NumRequest) returns (NumResponse) {}

    rpc Version(google.protobuf.Empty) returns (VersionResponse) {}
    rpc ReadFile(FilePath) returns (FileResponse) {}
}
